fix: добавлен text-overflow: elipsis для текстав profile.

--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,5 +1,6 @@
 .element__like {
   width: 21px;
+  height: 20px;
   margin-right: 10px;
   background-image: url(../../../image/heart.svg);
   background-position: center;
