--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,11 +1,14 @@
 .element__title {
-  width: 90%;
+  display: inline-block;
+  min-width: 0;
+  width: calc(80%);
   font-weight: 900;
   font-size: 24px;
-  line-height: 0.9;
+  line-height: 1.1;
   color: #000000;
   z-index: 1;
   padding-left: 21px;
-  display: flex;
-  justify-content: space-between;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
