--- a/blocks/form/__container/form__container.css
+++ b/blocks/form/__container/form__container.css
@@ -14,4 +14,5 @@
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+  z-index: 1;
 }
