--- a/blocks/profile/__info/_discription/profile__info_discription.css
+++ b/blocks/profile/__info/_discription/profile__info_discription.css
@@ -1,12 +1,18 @@
 .profile__info_discription {
   margin: 0;
   font-size: 18px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 295px;
+  min-width: 0;
+  display:inline-block;
 }
 
-@media screen and (max-width: 650px){
+@media screen and (max-width: 650px) {
   .profile__info_discription {
-      text-align: center;
-      font-size: 14px;
-      line-height: 17px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
